# libsxbp

./: .editorconfig  .gitignore  .travis.yml  .uncrustify.cfg  API.md  CLA_ENTITY.md  CLA_INDIVIDUAL.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Cache_Rebalancing_Algorithm.txt  Doxyfile  INSTALL_WINDOWS.md  Makefile  README.md  SXBP New Algorithm Exhaustive Parallelised Search Psuedocode.txt  array_rebalancing.py  base4_entropy  brown_fox.sxp  bspirals.c  bspirals.h  build_all.sh  build_logo.sh  cli.c  from_file.c  func_test.sh  func_test.sxp  functional_tests.c  generate.c  hard_hash.sxp_tmp  install_check.sh  name.sh  new_algorithm_experiment.c  new_algorithm_experiment_complexity.txt  old_tests.c  prepare.c  processors_work_share.py  render.c  renderer.c  saxbospiral.c  (+10 more)
cmake/Modules/: FindCheck.cmake
docs/: annotated.html  annotated_dup.js  backend__pbm_8h.html  backend__pbm_8h__incl.map  backend__pbm_8h__incl.md5  backend__pbm_8h_source.html  backend__png_8h.html  backend__png_8h__incl.map  backend__png_8h__incl.md5  backend__png_8h_source.html  classes.html  deprecated.html  dir_c99b4bd6479b6378cc5576b72b3ab7c8.html  dir_c99b4bd6479b6378cc5576b72b3ab7c8.js  dir_d88c95693a1d3683493b3e03165f8682.html  dir_d88c95693a1d3683493b3e03165f8682_dep.map  dir_d88c95693a1d3683493b3e03165f8682_dep.md5  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  initialise_8h.html  initialise_8h__incl.map  initialise_8h__incl.md5  initialise_8h_source.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  plot_8h.html  (+55 more)
docs/html/: annotated.html  backend__pbm_8h__incl.map  backend__pbm_8h__incl.md5  dir_c99b4bd6479b6378cc5576b72b3ab7c8.html  globals_enum.html  globals_type.html  globals_vars.html  initialise_8h.html  initialise_8h_source.html  render_8h.html  render_8h__dep__incl.md5  render_8h__incl.md5  saxbospiral_8h.html  saxbospiral_8h__incl.map  serialise_8h.html  serialise_8h_source.html  structsxbp__bitmap__t.html  structsxbp__buffer__t.html
docs/html/search/: all_7.js  all_e.js  files_4.js  typedefs_0.js
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_2.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js
libsxbp/: plot.c  render.h  saxbospiral.c  saxbospiral.h  solve.c
libsxbp/render_backends/: backend_pbm.c  backend_png.h
old_sxbp/: initialise.h  plot.h  render.c  saxbospiral.c  serialise.h
old_sxbp/render_backends/: backend_png.c  backend_png.h
saxbospiral/: initialise.c  initialise.h  plot.c  plot.h  render.c  render.h  saxbospiral.c  saxbospiral.h  serialise.c  serialise.h  solve.c  solve.h
saxbospiral/render_backends/: backend_pbm.c  backend_pbm.h  backend_png.c  backend_png.h  png_backend.c  png_backend.h
sxbp/: NEW_ALGORITHM.md  begin_figure.c  figure_collides.c  figure_collides.h  initialise.c  initialise.h  plot.c  plot.h  refine_figure.c  refine_figure_evolve.c  refine_figure_grow_from_start.c  refine_figure_shrink_from_end.c  render.c  render.h  render_figure.c  render_figure_to_bitmap.c  render_figure_to_null.c  render_figure_to_pbm.c  render_figure_to_svg.c  saxbospiral.c  saxbospiral.h  serialisation.c  serialise.c  serialise.h  solve.c  solve.h  sxbp.c  sxbp.h  sxbp_internal.c  sxbp_internal.h  sxbp_internal_get_file_size.c  utils.c
sxbp/render_backends/: backend_pbm.c  backend_pbm.h  backend_png.c  backend_png.h
tests/: all.c  check_wrapper.h  pbm_output_test_data.pbm  test_bitmap.c  test_buffer.c  test_figure.c  test_internal.c  test_suites.h  unit_tests.c
unit_test_harness/: harness.c  harness.h
